[FIX] website_sign: initial fields and dashboard
Fix dashboard useless scrollbar
Fix non-draggable initials fields when added on all pages
Add readonly flag for share link

--- a/website_sign/static/src/css/frontend.css
+++ b/website_sign/static/src/css/frontend.css
@@ -5,7 +5,7 @@
 
 /* Sign Home */
 #o_sign_dashboard {
-    margin-top: 10px;
+    padding-top: 10px;
 }
 
 .o_sign_dashboard_row {
